--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 authors = ["Steven Fackler <sfackler@gmail.com>", "Evan Simmons <esims89@gmail.com>"]
 description = "A highly configurable multi-output logging implementation for the `log` facade"
 license = "MIT/Apache-2.0"
-repository = "https://github.com/estk/log4rs"
+repository = "https://github.com/perdumonocle/log4rs"
 readme = "README.md"
 keywords = ["log", "logger", "logging", "log4"]
 edition = '2018'
